# aube

./: .gitattributes  .gitignore  .rules  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  aube.usage.kdl  hk.pkl  mise.toml  release-plz.toml  release.json
.buildkite/: pipeline.sh
.github/: actionlint.yaml  zizmor.yml
.github/workflows/: autofix.yml  bench-pr.yml  bench-refresh.yml  ci.yml  copr-publish.yml  docs.yml  ppa-publish.yml  publish-homebrew.yml  publish-npm.yml  release-plz.yml  release.yml  semantic-pr-lint.yml
benchmarks/: bench.sh  fixture.package.json  generate-results.js  hermetic.bash  pgo.bash  results.json  summarize-results-change.mjs  throttle-proxy.mjs  update-readme.mjs
crates/aube/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-cli/: Cargo.toml
crates/aube-codes/: CHANGELOG.md  Cargo.toml
crates/aube-linker/: CHANGELOG.md  Cargo.toml
crates/aube-lockfile/: CHANGELOG.md  Cargo.toml
crates/aube-manifest/: CHANGELOG.md  Cargo.toml
crates/aube-registry/: CHANGELOG.md  Cargo.toml
crates/aube-resolver/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-scripts/: CHANGELOG.md  Cargo.toml
crates/aube-scripts/src/: content_sniff.rs  lib.rs  linux_jail.rs  policy.rs
crates/aube-settings/: CHANGELOG.md  Cargo.toml  build.rs  settings.toml
crates/aube-store/: CHANGELOG.md  Cargo.toml  build.rs
crates/aube-util/: CHANGELOG.md  Cargo.toml
crates/aube-workspace/: CHANGELOG.md  Cargo.toml
docs/: aube-lock.yaml  benchmarks.md  bun-users.md  error-codes.data.json  error-codes.md  getting-started.md  guide.md  installation.md  migration.md  npm-users.md  pnpm-users.md  security.md  troubleshooting.md  yarn-migration.md  yarn-users.md
docs/.vitepress/: config.mts
docs/cli/: add.md  cache.md  commands.json  config.md  deploy.md  deprecations.md  dlx.md  exec.md  index.md  install.md  query.md  run.md  update.md
docs/package-manager/: configuration.md  global-virtual-store.md  install.md  jailed-builds.md  lifecycle-scripts.md  lockfiles.md  node-modules.md  scripts.md  security-scanner.md
docs/settings/: cli.md  env.md  index.md  npmrc.md  workspace-yaml.md
mise-tasks/test/: bats
npm/: installArchSpecificPackage.js
npm/scripts/: publish.mjs
packaging/copr/: Dockerfile  build-copr.sh
scripts/: generate-primer.mjs
test/: PNPM_TEST_IMPORT.md  add.bats  allow_builds.bats  approve_builds.bats  audit.bats  catalogs.bats  check.bats  cli.bats  config.bats  deploy.bats  dlx.bats  fetch.bats  global_install.bats  guardrails.bats  import.bats  install.bats  lifecycle_scripts.bats  local_deps.bats  lockfile_dir.bats  nextjs_gvs_autodisable.bats  node_gyp_bootstrap.bats  optional_platform.bats  outdated.bats  overrides.bats  package_lock_write.bats  peer_deps.bats  pnpm_install_hooks.bats  pnpm_install_misc.bats  pnpm_monorepo_dedupePeers.bats  pnpm_monorepo_index.bats  pnpm_savecatalog.bats  pnpm_update.bats  pnpm_update_slow.bats  pnpmfile.bats  publish.bats  query.bats  rebuild.bats  run.bats  settings.bats  store.bats  (+6 more)
(+205 files in other folders)
